[tool.poetry]
name = "fulfillment-function"
version = "0.0.7"
description = ""
authors = ["AWS ProServe <proserve@amazon.com>"]
packages = [{include = "fulfillment_function", from="src"}]

[tool.poetry.scripts]
fulfillment-function = "fulfillment_function.main:main"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
aws-lambda-powertools = {extras = ["tracer"], version = "^3.5.0"}
pydantic = "^2.10.6"
pydantic-core = "^2.28.0"
cryptography = "^44.0.0"
pydantic-settings = "^2.7.1"
lex-helper = { path = "lex_helper-0.0.9-py3-none-any.whl" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
