[project]
name = "fulfillment-function"
version = "0.0.7"
description = ""
authors = [
    {name = "AWS ProServe", email = "proserve@amazon.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests>=2.32.3,<3.0.0",
    "aws-lambda-powertools[tracer]>=3.5.0,<4.0.0",
    "pydantic>=2.10.6,<3.0.0",
    "pydantic-core>=2.28.0,<3.0.0",
    "cryptography>=44.0.0,<45.0.0",
    "pydantic-settings>=2.7.1,<3.0.0",
    "lex-helper",
]

[project.scripts]
fulfillment-function = "fulfillment_function.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fulfillment_function"]

[tool.hatch.build.targets.sdist]
include = [
    "src/fulfillment_function",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
lex-helper = { path = "lex_helper-0.0.2-py3-none-any.whl" }
